--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Serene Himachal",
+  "name": "Natours",
   "version": "1.0.0",
-  "description": "Landing page for Serene Himachal",
+  "description": "Landing page for Natours",
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass sass/main.scss css/style.css -w"
